packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_generate_event_spy_helpers__only_event_with_indexed_fields.snap
---
source: src/tests/test_generate_event_spy_helpers.rs
assertion_line: 68
expression: get_string_result(input)
---
TokenStream:

#[generate_trait]
impl GovernorSpyHelpers of GovernorSpyHelpersTrait {
    fn assert_event_proposal_executed(
        ref self: EventSpy,
        contract: ContractAddress,
        proposal_id: felt252,
        executor: ContractAddress,
    ) {
        let expected = ExpectedEvent::new()
            .key(selector!("ProposalExecuted"))
            .key(proposal_id)
            .data(executor);
        self.assert_emitted_single(contract, expected);
    }
    fn assert_only_event_proposal_executed(
        ref self: EventSpy,
        contract: ContractAddress,
        proposal_id: felt252,
        executor: ContractAddress,
    ) {
        let expected = ExpectedEvent::new()
            .key(selector!("ProposalExecuted"))
            .key(proposal_id)
            .data(executor);
        self.assert_only_event(contract, expected);
    }
}


Diagnostics:

None

AuxData:

None
